# termpilot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CLAUDE.md  README.md  README.zh-CN.md  TERMPILOT.md  binary_search.py  plan.md  pyproject.toml
.termpilot/tool-results/: call_e643d6012a414855822c8164.txt
docs/: compact-testing.md  compact.md  compact.zh-CN.md  conventions.md  conventions.zh-CN.md  golden-rules.md  golden-rules.zh-CN.md  hooks.md  hooks.zh-CN.md  mcp.md  mcp.zh-CN.md  mcp_skills.md  mcp_skills.zh-CN.md  memory-testing.md  message-queue.md  message-queue.zh-CN.md  messages_attachments.md  messages_attachments.zh-CN.md  notion-en.md  system_prompt_sections.md  system_prompt_sections.zh-CN.md  task-tool.md  task-tool.zh-CN.md
docs/test_cases/subagent_tasks/: test_report.md
evals/: .gitignore  run_eval.py  tasks.jsonl
evals/templates/fix-python-test/: calc.py  test_calc.py
evals/templates/multi-file/: app.py  test_app.py  utils.py
evals/templates/refactor-function/: test_main.py
evals/templates/run-command/: data.txt
scripts/: check.py
src/cc_python/: __main__.py  api.py  cli.py  compact.py  config.py  context.py  hooks.py  messages.py  session.py  skills.py  token_tracker.py  tool_result_storage.py  undo.py
src/cc_python/tools/: __init__.py  agent.py  bash.py  edit_file.py  glob_tool.py  grep_tool.py  read_file.py  web_fetch.py  web_search.py  write_file.py
src/termpilot/: __main__.py  api.py  attachments.py  claudemd.py  cli.py  commands.py  compact.py  config.py  context.py  hooks.py  messages.py  permissions.py  prompt_utils.py  queue.py  routing.py  session.py  skills.py  token_tracker.py  tool_result_storage.py  ui.py  undo.py
src/termpilot/mcp/: __init__.py  client.py  config.py  transport.py
src/termpilot/tools/: __init__.py  agent.py  ask_user.py  base.py  edit_file.py  enter_plan.py  exit_plan.py  glob_tool.py  grep_tool.py  list_mcp_resources.py  mcp_tool.py  notebook_edit.py  read_mcp_resource.py  skill_tool.py  task.py  write_file.py
tests/: conftest.py  test_api.py  test_attachments.py  test_claudemd.py  test_cli_drain.py  test_cli_permissions.py  test_commands.py  test_compact.py  test_config.py  test_context.py  test_hooks.py  test_messages.py  test_permissions.py  test_prompt_utils.py  test_queue.py  test_routing.py  test_session.py  test_skills.py  test_token_tracker.py  test_tool_result_storage.py  test_ui_delegation.py
tests/mcp/: test_mcp_client.py  test_mcp_config.py  test_mcp_transport.py
tests/tools/: test_agent_tool.py  test_ask_user.py  test_bash.py  test_edit_file.py  test_glob_tool.py  test_grep_tool.py  test_notebook_edit.py  test_read_file.py  test_skill_tool.py  test_task.py  test_web_fetch.py  test_web_search.py  test_write_file.py
