[project]
name = "cc-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27.0",
    "markdownify>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=7.0.0",
]

[project.scripts]
cc-python = "cc_python.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
